Textured workplane, navigation cube overshoot bugfix
General cleanup.
Introduces textured workplane
Solves navigation cube overshoot